apps/freezer-mgr/base/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-03-19 - 16:37:52 +0000
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
    app.quarkus.io/commit-id: a6f67ca94207d206c56db6cd72958181e240d886
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
  labels:
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: freezer-mgr
    app: freezer-mgr
  name: freezer-mgr
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: freezer-mgr
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2021-03-19 - 16:37:52 +0000
        app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
        app.quarkus.io/commit-id: a6f67ca94207d206c56db6cd72958181e240d886
        app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
      labels:
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: freezer-mgr
        app: freezer-mgr
    spec:
      containers:
      - args:
        - -jar
        - /deployments/quarkus-run.jar
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: quay.io/ibmcase/vaccine-freezer-mgr
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: freezer-mgr
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user-cert
          readOnly: false
          subPath: ""
      serviceAccount: freezer-mgr
      volumes:
      - name: kafka-cert
        secret:
          optional: false
          secretName: kafka-cluster-ca-cert
      - name: user-cert
        secret:
          optional: false
          secretName: tls-user
