apps/freezer-mgr/base/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-03-18 - 22:09:19 +0000
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
    app.quarkus.io/commit-id: 86344685b092923c7e1b23213bfe4fefe8508147
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
  labels:
    app.kubernetes.io/name: freezer-mgr
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
    app: freezer-mgr
  name: freezer-mgr
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: freezer-mgr
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2021-03-18 - 22:09:19 +0000
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
    app.quarkus.io/commit-id: 86344685b092923c7e1b23213bfe4fefe8508147
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-freezer-mgr.git
  labels:
    app.kubernetes.io/name: freezer-mgr
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
    app: freezer-mgr
  name: freezer-mgr
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: freezer-mgr
